Show and hide navs, bars etc ...

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 <body layout="row" md-no-ink>
     <div class="splash" ng-cloak>app loading</div>
-    <main layout="row" flex title="'ng typescript Material'" ng-cloak></main>
+    <main layout="row" flex title="'AngularJS Material'" ng-cloak></main>
 </body>
 
 <script src="/app.bundle.js"></script>
